--- a/experiments/fetal/fetal_landmark_hrnet_w18_newdata_noaug.yaml
+++ b/experiments/fetal/fetal_landmark_hrnet_w18_newdata_noaug.yaml
@@ -1,12 +1,15 @@
-GPUS: (0, )
+GPUS: (1, )
 WORKERS: 4
 PRINT_FREQ: 50
 
 DATASET:
   DATASET: FETAL
-  ROOT: './data/fetal/images_full'
-  TRAINSET: './data/fetal/images_full_noaugtrials.csv'
-  TESTSET: './data/fetal/images_full_noaugtrials.csv'
+  # ROOT: './data/fetal/images_full'
+  ROOT: '/home/chiara/workspace/fetalbiometry_paper/fetalbiometrydata/data/FP/BPD'
+  # TRAINSET: './data/fetal/images_full_noaugtrials.csv'
+  TRAINSET: '/home/chiara/workspace/fetalbiometry_paper/fetalbiometrydata/FP/BPD_Train.csv'
+  # TESTSET: './data/fetal/images_full_noaugtrials.csv'
+  TESTSET: '/home/chiara/workspace/fetalbiometry_paper/fetalbiometrydata/FP/BPD_Test.csv'
   FLIP: true
   SCALE_FACTOR: 0.1
   ROT_FACTOR: 0
@@ -64,7 +67,7 @@ MODEL:
         - 144
       FUSE_METHOD: SUM
 TRAIN:
-  BATCH_SIZE_PER_GPU: 16
+  BATCH_SIZE_PER_GPU: 64
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 500
@@ -76,4 +79,4 @@ TRAIN:
   MOMENTUM: 0.0
   NESTEROV: false
 TEST:
-  BATCH_SIZE_PER_GPU: 8
+  BATCH_SIZE_PER_GPU: 64
